feat: Add interfaces
* Add business logic interfaces
* That will be support these endpoints and responses:
* https://gothinkster.github.io/realworld/docs/specs/backend-specs/api-response-format#profile
* https://gothinkster.github.io/realworld/docs/specs/backend-specs/endpoints#get-profile
* https://gothinkster.github.io/realworld/docs/specs/backend-specs/endpoints#follow-user
* https://gothinkster.github.io/realworld/docs/specs/backend-specs/endpoints#unfollow-user

--- a/Conduit.Person.WebApi/Conduit.Person.WebApi.csproj
+++ b/Conduit.Person.WebApi/Conduit.Person.WebApi.csproj
@@ -12,7 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\shared-core\Conduit.Shared\Conduit.Shared.csproj" />
+      <ProjectReference Include="..\shared-core\Conduit.Shared\Conduit.Shared.csproj" />
     </ItemGroup>
     
 </Project>
