--- a/Conduit.Person.WebApi/Conduit.Person.WebApi.csproj
+++ b/Conduit.Person.WebApi/Conduit.Person.WebApi.csproj
@@ -14,5 +14,9 @@
     <ItemGroup>
       <ProjectReference Include="..\shared-core\Conduit.Shared\Conduit.Shared.csproj" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Controllers" />
+    </ItemGroup>
     
 </Project>
