--- a/Conduit.Person.WebApi/appsettings.json
+++ b/Conduit.Person.WebApi/appsettings.json
@@ -10,5 +10,15 @@
   "W3C": {
     "LogDirectory": "./",
     "FileName": "w3c.log"
+  },
+  "RabbitMQ": {
+    "HostName": "hostname",
+    "UserName": "username",
+    "Password": "password"
+  },
+  "Neo4J": {
+    "Password": "",
+    "Username": "",
+    "Uri": ""
   }
 }
