--- a/Conduit.Person.WebApi/Conduit.Person.WebApi.csproj
+++ b/Conduit.Person.WebApi/Conduit.Person.WebApi.csproj
@@ -4,15 +4,18 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <EnablePreviewFeatures>True</EnablePreviewFeatures>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3"/>
+    <PackageReference Include="AspNetCore.HealthChecks.Rabbitmq" Version="6.0.1-rc2.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\shared-core\Conduit.Shared\Conduit.Shared.csproj"/>
+    <ProjectReference Include="..\Conduit.Person.DataAccessLayer\Conduit.Person.DataAccessLayer.csproj" />
+    <ProjectReference Include="..\shared-core\Conduit.Shared\Conduit.Shared.csproj" />
   </ItemGroup>
 
 </Project>
