feat: Add future messaging
* Improve storage integration
* Update submodule shared-core
* Modify business logic

--- a/Conduit.Person.WebApi/appsettings.json
+++ b/Conduit.Person.WebApi/appsettings.json
@@ -20,5 +20,13 @@
     "Password": "",
     "Username": "",
     "Uri": ""
+  },
+  "Events": {
+    "RegisterUser": {
+      "Queue": "queue-registerusereventmodel-person"
+    },
+    "UpdateUser": {
+      "Queue": "queue-updateusereventmodel-person"
+    }
   }
 }
